// proto/sirsi/contracts/v2/contract_service.proto
syntax = "proto3";

package sirsi.contracts.v2;

import "sirsi/common/v1/common.proto";

option go_package = "github.com/sirsimaster/sirsi-nexus/gen/go/sirsi/contracts/v2";

service ContractsService {
  // Contract CRUD
  rpc CreateContract(CreateContractRequest) returns (Contract);
  rpc GetContract(GetContractRequest) returns (Contract);
  rpc ListContracts(ListContractsRequest) returns (ListContractsResponse);
  rpc UpdateContract(UpdateContractRequest) returns (Contract);
  rpc DeleteContract(DeleteContractRequest) returns (DeleteContractResponse);
  
  // Template Generation
  rpc GeneratePage(GeneratePageRequest) returns (GeneratePageResponse);
  
  // Payment Integration
  rpc CreateCheckoutSession(CreateCheckoutRequest) returns (CheckoutSession);
  
  // Bank Transfer (Plaid) Integration
  rpc CreatePlaidLinkToken(CreatePlaidLinkTokenRequest) returns (PlaidLinkToken);
  rpc ExchangePlaidToken(ExchangePlaidTokenRequest) returns (ExchangePlaidTokenResponse);
  
  // Bidirectional Streaming (future: chat, real-time events)
  rpc StreamEvents(stream EventRequest) returns (stream EventResponse);
}

message Contract {
  string id = 1;
  string project_id = 2;
  string tenant_id = 3;
  string client_name = 4;
  string client_email = 5;
  string project_name = 6;
  
  // Pricing
  sirsi.common.v1.Money total_amount = 7;
  repeated PaymentPlan payment_plans = 8;
  
  // Theming
  Theme theme = 9;
  
  // Status
  ContractStatus status = 10;
  
  // Metadata & Verification
  sirsi.common.v1.AuditEntry created = 11;
  sirsi.common.v1.AuditEntry updated = 12;
  
  string signature_hash = 13;
  string signature_image_data = 14;
  bool legal_acknowledgment = 15;
  string client_title = 16;

  string countersigner_name = 17;
  string countersigner_email = 18;
  string countersigner_title = 19;
  string countersigner_signature_hash = 20;
  string countersigner_signature_image_data = 21;
  int64 countersigned_at = 22;

  // Stripe Architecture
  string stripe_connect_account_id = 23;

  // Selection Data
  int32 selected_payment_plan = 24;
  string payment_method = 25;
  sirsi.common.v1.Money paid_amount = 26;
}

message PaymentPlan {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 payment_count = 4;
  sirsi.common.v1.Money monthly_amount = 5;
  sirsi.common.v1.Money total_amount = 6;
}

message Theme {
  string primary_color = 1;
  string secondary_color = 2;
  string accent_color = 3;
  string font_heading = 4;
  string font_body = 5;
}

enum ContractStatus {
  CONTRACT_STATUS_UNSPECIFIED = 0;
  CONTRACT_STATUS_DRAFT = 1;
  CONTRACT_STATUS_ACTIVE = 2;
  CONTRACT_STATUS_SIGNED = 3;
  CONTRACT_STATUS_PAID = 4;
  CONTRACT_STATUS_ARCHIVED = 5;
  CONTRACT_STATUS_WAITING_FOR_COUNTERSIGN = 6;
  CONTRACT_STATUS_FULLY_EXECUTED = 7;
}

message CreateContractRequest {
  string project_id = 1;
  string tenant_id = 2;
  string client_name = 3;
  string client_email = 4;
  string project_name = 5;
  sirsi.common.v1.Money total_amount = 6;
  repeated PaymentPlan payment_plans = 7;
  Theme theme = 8;
  string countersigner_name = 9;
  string countersigner_email = 10;
  string countersigner_title = 11;
  string stripe_connect_account_id = 12;
}

message GetContractRequest {
  string id = 1;
}

message ListContractsRequest {
  string project_id = 1;
  string tenant_id = 2;
  sirsi.common.v1.PaginationRequest pagination = 3;
  string user_email = 4;
}

message ListContractsResponse {
  repeated Contract contracts = 1;
  sirsi.common.v1.PaginationResponse pagination = 2;
}

message UpdateContractRequest {
  string id = 1;
  Contract contract = 2;
  repeated string update_mask = 3;
}

message DeleteContractRequest {
  string id = 1;
}

message DeleteContractResponse {
  bool success = 1;
}

message GeneratePageRequest {
  string contract_id = 1;
  Theme theme_override = 2;
}

message GeneratePageResponse {
  string html = 1;
  string preview_url = 2;
}

message CreateCheckoutRequest {
  string contract_id = 1;
  string plan_id = 2;
  string success_url = 3;
  string cancel_url = 4;
  string stripe_connect_account_id = 5;
  repeated string payment_method_types = 6;
}

message CheckoutSession {
  string session_id = 1;
  string checkout_url = 2;
}

message CreatePlaidLinkTokenRequest {
  string user_id = 1;
  string client_name = 2;
}

message PlaidLinkToken {
  string link_token = 1;
}

message ExchangePlaidTokenRequest {
  string public_token = 1;
  string contract_id = 2;
  string account_id = 3;
}

message ExchangePlaidTokenResponse {
  bool success = 1;
  string stripe_bank_account_token = 2;
  string message = 3;
}

message EventRequest {
  string subscription_id = 1;
  repeated string event_types = 2;
}

message EventResponse {
  string event_id = 1;
  string event_type = 2;
  string payload = 3;
  int64 timestamp = 4;
}
